css/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
 
}
body {
  font-family: 'PT Sans', sans-serif;
  background: linear-gradient(90deg, #252529, rgb(70, 70, 70));
  margin: 0;
  color: #fff;
  line-height: 1.6;
}

#showcase a {
  text-decoration: none;
}

.section {
  padding: 0.5rem;
}

.section-head {
  font-size: 3rem;
  margin: 0;
  text-align: center;
}

.animate__animated.animate__backInLeft{
--animate-duration: 2s;
}
.animate__animated.animate__backInRight{
--animate-duration: 2s;
}
.animate__animated.animate__bounceInUp{
--animate-duration: 2s;
}
/* Showcase */
#showcase {
  margin: 0;
  padding: 0;
  background: linear-gradient(90deg, crimson,rgb(221, 42, 78), rgb(231, 94, 121));
  width: 100%;
  height: 100vh;
  position: relative;
  overflow-y: hidden;
}

#showcase .container{
    margin-top: 20vh;
}

.container {
  max-width: 1180px;
  text-align: center;
  margin: 0 auto;
  padding: 0 3rem;
}

.lead{
  font-size: 1.8rem;
  font-family: "Sriracha";
  padding-top: 5px;
}

html {
scroll-behavior: smooth;
}

/* carousel */

.wrap{
  width:700px;
  margin: 30px auto;
}
/* Navigation */
.pull-left{
  margin:0;
  padding:1px 0px 6px 30px;
}
.cf{
  padding-top:5px;
}
.nav-link{
    font-size:28px;
    color:white;
}
nav {
  height: 95px;
  width: 100%;
  background-color:#343a40;
  color: #eee;
  position: fixed;
  padding-top:0;
  z-index: 2;
}
nav ul {
  padding: 0;
  margin: 0;
  text-align: right;
}
nav li {
  display: inline;
  font-size: 2rem;
}
nav a {
  display: inline-block;
  width: 130px;
  text-align: center;
  text-decoration: none;
  align-items: center;
  padding: 8px 0;
  margin-top: 15px;
  color: rgb(141, 126, 126);
}
nav a#openup {
  display: none;
}
/* Nav-hover effects */
nav.fill ul li a {
  position: relative;
}
nav.fill ul li a:after {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: '.';
  color: transparent;
  background: #aaa;
  height: 2px;
}
nav.fill ul li a {
  transition: all 2s;
}

nav.fill ul li a:after {
  text-align: left;
  content: '.';
  margin: 0;
  opacity: 0;
}
nav.fill ul li a:hover {
  background-color: rgb(46, 62, 78);
  color: white;
  z-index: 1;
}
nav.fill ul li a:hover:after {
  z-index: -10;
  animation: fill 1s forwards;
  -webkit-animation: fill 1s forwards;
  -moz-animation: fill 1s forwards;
  opacity: 1;
}

.why-us{
  font-family: "Sriracha";
  margin-top: 3rem;
  font-size: 2rem;
  display: inline-block;
  border: 1px solid white;
  transition: all 200ms ease;
  padding: 10px 20px;
}
  .why-us:hover{
      background: white;
      opacity: 0.7;
  }
  .fas:hover{
    color: rgb(46, 62, 78);
  }
  

/*media queries */

@media screen and (max-width: 685px) {
  
  *{
      overflow-x: hidden;
      scroll-behavior: unset;
  }
  .pull-left {
    display: none;
  }
  .wrap{
      width:80%;
      margin: 10px auto;
  }
  .hide-on-small {
      display: none;
  }

  #showcase {
      height: 80vh;
  }

  #showcase .container {
      margin-top: 15vh;
  }

  #showcase h1{
      font-size: 4rem;
  }
  
  #showcase h2{
      font-size: 1.8rem;
  }
  .section-head{
      font-size: 1.5rem;
  }
  
  nav {
    height: auto;
    border-bottom: 0;
  }
  nav ul {
    display: none;
    height: auto;
  }
  nav li {
    width: 100%;
    float: right;
    position: relative;
  }
  nav a {
    text-align: left;
    width: 100%;
    text-indent: 25px;
    font-size: 2rem;
    /* background: #333; */
    border-bottom: 1px solid #ccc;
    color:#eee;
  }

  nav a#openup:after {
    content: "|||";
    transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    /* IE 9 */
    -webkit-transform: rotate(-90deg);
    /* Safari and Chrome */
    width: 30px;
    height: 30px;
    display: inline-block;
    position: absolute;
    right: 5px;
    top: 20px;
  }
  nav a#openup {
    display: block;
    /* background-color: #333; */
    width: 100%;
    position: relative;
    padding-top:0;
  }
}
.cf:before, .cf:after {
  content: "";
  display: table;
}

.cf:after {
  clear: both;
}

.cf {
  zoom: 1;
}

/* For IE 6/7 (trigger hasLayout) */


/*Buttons */


.buttons {
position: relative;
padding-left: 10%;
padding-right: 10%;
}

.vertical-center {
  margin-top: 10%;
  /* position: absolute; */
  top: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.btn full, .btn ghost {
  position: relative;
  align-content: center;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%)
  
}
/* ----- BUTTONS ----- */
.btn:link,
.btn:visited,
input[type=submit] {
  display: inline-block;
  padding: 5px 12px;
  font-weight: 300;
  text-decoration: none;
  border-radius: 200px;
  -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
  transition: background-color 0.2s, border 0.2s, color 0.2s;
}

.btn-full:link,
.btn-full:visited,
input[type=submit] {
  background-color: #e67e22;
  border: 1px solid #e67e22;
  color: #fff;
  margin-right: 15px;
}

.btn-ghost:link,
.btn-ghost:visited {
  border: 1px solid #e67e22;
  color: #e67e22;
}

.btn:hover,
.btn:active,
input[type=submit]:hover,
input[type=submit]:active {
  background-color: #cf6d17;
}

.btn-full:hover,
.btn-full:active {
  border: 1px solid #cf6d17;
}

.btn-ghost:hover,
.btn-ghost:active {
  border: 1px solid #cf6d17;
  color: #fff;
}

/* footer styling */

.footer-section{
  background: rgb(30, 40, 51);
  color: white;
  font-size: 2rem;
}

.footer-logo{
  text-align: center;
  text-shadow: 1px 1px aquamarine;    
}

.footer-social{
  display: flex;
  justify-content: space-around;
  font-size: 4rem;
}

.footer-nav a{
  display: flex;
  justify-content: space-around;
  padding-bottom: 5px;
}

